--- a/app/styles/libs/_helpers.scss
+++ b/app/styles/libs/_helpers.scss
@@ -20,6 +20,14 @@ $spacer-heights: 50 100 200 300 400 500 600 700 800 900;
   text-align: center;
 }
 
+.hyperlink {
+  color: #4183c4;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 @media only screen and (max-width: 767px) {
   .mobile.hidden,
   .tablet.only,
