card & collapse added to basic & additional info tabs

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,10 +10,10 @@
 html,
 body {
   font-size: 16px;
+  background-color: #fafbfc;
 }
 
 .ui.button {
   align-self: center;
   font-size: 14px;
 }
-
