--- a/app/components/forms/wizard/wizard-footer.hbs
+++ b/app/components/forms/wizard/wizard-footer.hbs
@@ -1,33 +1,37 @@
 <div class="ui grid">
   <div class="sixteen wide column {{unless @device.isMobile 'right aligned'}}">
     {{#if @event.identifier}}
-      <LinkTo @route="events.view.index" @model={{@event.identifier}} class="ui red button right labeled icon small right aligned mt-4 {{if this.isUserUnverified 'disabled'}} button">
-        {{t 'Cancel'}} <i class="close icon"></i>
+      <LinkTo @route="events.view.index" @model={{@event.identifier}} class="ui red button left labeled icon small right aligned mt-4 {{if this.isUserUnverified 'disabled'}} button">
+        <i class="close icon"></i>
+        {{t 'Cancel'}} 
       </LinkTo>
     {{else}}
-      <LinkTo @route="events.list" @model="live" class="ui orange button right labeled icon small mt-4 {{if this.isUserUnverified 'disabled'}}">
-        {{t 'Discard'}} <i class="close icon"></i>
+      <LinkTo @route="events.list" @model="live" class="ui orange button left labeled icon small mt-4 {{if this.isUserUnverified 'disabled'}}">
+         <i class="close icon"></i>
+         {{t 'Discard'}}
       </LinkTo>
     {{/if}}
-    {{#if (not @first)}}
+    {{!-- {{#if (not @first)}}
       <button class="ui left labeled small icon button {{if @isLoading 'disabled'}}" type="button" {{action @move 'backwards'}}>
         {{t 'Previous'}}
         <i class="left chevron icon"></i>
-      </button>
-    {{/if}}
+      </button> --}}
+    {{!-- {{/if}}
     {{#if (not @last)}}
       <button class="ui button right labeled icon small {{if @loading 'disabled'}} right aligned mt-4" type="button" {{action @move 'forwards'}}>
         {{t 'Next'}}
         <i class="right chevron icon"></i>
       </button>
-    {{/if}}
+    {{/if}} --}}
     {{#if (eq @event.state 'draft')}}
-      <button class="ui blue button right labeled icon small right aligned {{if @loading 'disabled'}} mt-4" type="button" {{action @onSaveDraft}}>
-        {{t 'Save as draft'}} <i class="save icon"></i>
+      <button class="ui blue button left labeled icon small right aligned {{if @loading 'disabled'}} mt-4" type="button" {{action @onSaveDraft}}>
+        <i class="save icon"></i>
+        {{t 'Save as draft'}}
       </button>
     {{else}}
-      <button class="ui blue button right labeled icon small right aligned {{if @loading 'disabled'}}" type="button" {{action @onSaved}}>
-        {{t 'Save'}} <i class="save icon"></i>
+      <button class="ui blue button left labeled icon small right aligned {{if @loading 'disabled'}}" type="button" {{action @onSaved}}>
+        <i class="save icon"></i>
+        {{t 'Save'}}
       </button>
     {{/if}}
   </div>
