register form changes

--- a/app/templates/register.hbs
+++ b/app/templates/register.hbs
@@ -1,4 +1,4 @@
-<div class="ui three column container stackable doubling centered grid">
+<div class="ui one column container stackable doubling centered grid">
   <div class="column">
     <Forms::RegisterForm
       @data={{this.model}}
