--- a/app/templates/components/forms/register-form.hbs
+++ b/app/templates/components/forms/register-form.hbs
@@ -1,53 +1,70 @@
-<form class="ui large form" autocomplete="off" {{action 'submit' on='submit'}} novalidate>
-  <div class="ui aligned segment basic no margin no padding">
-    <h3 class="weight-400">{{t 'Register'}}</h3>
-  </div>
-  <div class="ui segments">
-    <div class="ui segment {{if this.isLoading 'loading' ''}}">
-      {{#if this.errorMessage}}
-        <div class="ui negative message">
-          <p>{{this.errorMessage}}</p>
-        </div>
-      {{/if}}
-      <div class="{{if this.inviteEmail 'disabled' }} field">
-        <div class="ui left icon input">
-          <i class="mail icon"></i>
-          <Input @name="email" @type="email" placeholder={{t "Email"}} @value={{this.data.email}} />
-        </div>
+<div class="ui stackable {{unless this.noSocial 'two' 'one'}} column doubling centered grid mt-4">
+  <div class="column">
+    <form class="ui large form" autocomplete="off" {{action 'submit' on='submit'}} novalidate style="cursor:  default;">
+      <div class="ui aligned segment basic no margin no padding">
+        <h2 class="weight-300 text centered">{{t 'Register'}}</h2>
       </div>
-      <div class="field required">
-        <div class="ui left icon input">
-          <i class="lock icon"></i>
-          <Input class="rounded-r-none" @type="{{if this.showSignupPass 'text' 'password'}}" @name="password" placeholder={{t "Password"}} @value={{this.data.password}} />
-          <div class="ui small basic icon buttons rounded-l-none">
-            <button type="button" class="ui button" {{action 'showSignupPassword'}}>
-              <i class="{{if this.showSignupPass 'hide' 'unhide'}} basic icon"></i>
-            </button>
+      <div class="ui segments">
+        <div class="ui segment {{if this.isLoading 'loading' ''}}" style="padding: 30px;">
+          {{#if this.errorMessage}}
+            <div class="ui negative message">
+              <p>{{this.errorMessage}}</p>
+            </div>
+          {{/if}}
+          <div class="{{if this.inviteEmail 'disabled' }} field required">
+            <label for="email">{{t 'Email Address'}}</label>
+            <div class="ui left icon input">
+              <i class="mail icon"></i>
+              <Input @name="email" @type="email" @id="email" @value={{this.data.email}} />
+            </div>
+          </div>
+          <div class="field required">
+            <label for="password">{{t 'Password'}}</label>
+            <div class="ui left icon input">
+              <i class="lock icon"></i>
+              <Input class="rounded-r-none" @type="{{if this.showSignupPass 'text' 'password'}}" @name="password" @id="password" @value={{this.data.password}} />
+              <div class="ui small basic icon buttons rounded-l-none">
+                <button type="button" class="ui button" {{action 'showSignupPassword'}}>
+                  <i class="{{if this.showSignupPass 'hide' 'unhide'}} basic icon"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="field required">
+            <label for="password_repeat">{{t 'Re-enter Password'}}</label>
+            <div class="ui left icon input">
+              <i class="lock icon"></i>
+              <Input class="rounded-r-none" @type="{{if this.showConfirmPass 'text' 'password'}}" @name="password_repeat" @id="password_repeat" @value={{this.data.password_repeat}} />
+              <div class="ui small basic icon buttons rounded-l-none">
+                <button type="button" class="ui button" {{action 'showConfirmPassword'}}>
+                  <i class="{{if this.showConfirmPass 'hide' 'unhide'}} basic icon"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          
+          <div class="ui center aligned segment basic" style="padding: 10px 0px 0px 0px">
+            {{#if this.showHcaptcha}}
+              <HCaptcha @onSuccess={{action (mut this.captcha)}} @onExpired={{action (mut this.captcha)}} @onRender={{action (mut this.captchaRendered)}} />
+            {{/if}}
+            <div class="ui vertical buttons" style="width: 100%;">
+              <button type="submit" class="ui fluid teal submit button register {{if (and (not this.captcha) this.showHcaptcha this.captchaRendered) 'disabled'}}"
+                style="border-radius: 5px">
+                {{t 'Register'}}
+              </button>
+            </div>
           </div>
         </div>
       </div>
-      <div class="field required">
-        <div class="ui left icon input">
-          <i class="lock icon"></i>
-          <Input class="rounded-r-none" @type="{{if this.showConfirmPass 'text' 'password'}}" @name="password_repeat" placeholder={{t "Re-enter Password"}} @value={{this.data.password_repeat}} />
-          <div class="ui small basic icon buttons rounded-l-none">
-            <button type="button" class="ui button" {{action 'showConfirmPassword'}}>
-              <i class="{{if this.showConfirmPass 'hide' 'unhide'}} basic icon"></i>
-            </button>
-          </div>
-        </div>
+      <div class="ui segments">
+        <p class="ui segment center aligned text weight-500">Already have an account?
+          <span>
+            <a class="hyperlink" href="{{href-to 'login'}}" >
+              {{t ' Login'}}
+            </a>
+          </span>
+        </p>
       </div>
-      {{#if this.showHcaptcha}}
-        <HCaptcha @onSuccess={{action (mut this.captcha)}} @onExpired={{action (mut this.captcha)}} @onRender={{action (mut this.captchaRendered)}} />
-      {{/if}}
-      <div class="ui center aligned segment basic">
-        <button type="submit" class="ui fluid large teal submit button register {{if (and (not this.captcha) this.showHcaptcha this.captchaRendered) 'disabled'}}">
-          {{t 'Register'}}
-        </button>
-      </div>
-    </div>
-    <a href="{{href-to 'login'}}" class="ui secondary segment center aligned text muted weight-800">
-      {{t 'Already have an account? Login'}}
-    </a>
+    </form>
   </div>
-</form>
+</div>
