--- a/app/styles/pages/my.scss
+++ b/app/styles/pages/my.scss
@@ -17,14 +17,21 @@
 }
 
 .collapsible {
-  background-color: #e0e1e2;
+  background-color: #fff;
   cursor: pointer;
   padding: 18px;
   width: 100%;
   text-align: left;
-  outline: none;
   font-size: 15px;
-  border: 0;
+  position: relative;
+  border-collapse: separate;
+  border-color: rgba(34, 36, 38, 1/20);
+  border-style: solid;
+  border-width: 1px;
+  outline: rgba(0, 0, 0, 87/100) none none;
+  box-sizing: border-box;
+  border-radius: 4.57143px;
+
 
   .active,
   &:hover {
@@ -33,7 +40,7 @@
 }
 
 .collapsible-content {
-  padding: 18px;
+  padding: 18px 0;
   overflow: hidden;
   background-color: #fff;
 }
@@ -45,3 +52,10 @@
 .collapsible-none {
   display: none;
 }
+
+.chevron-right {
+  position: absolute;
+  right: 0;
+}
+
+
