--- a/app/templates/components/forms/wizard/other-details-step.hbs
+++ b/app/templates/components/forms/wizard/other-details-step.hbs
@@ -103,10 +103,12 @@
           }}
         </div>
       </div>
+      <br/>
       <Widgets::Forms::RichTextEditor
         @textareaId="refunduct"
         @value={{this.data.event.refundPolicy}}
       />
+
     </div>
   </div>
 
@@ -116,6 +118,7 @@
     </h3>
     <div class="grouped fields">
       {{!-- <label for="privacy">{{t "Listing Privacy"}}</label> --}}
+      <label for="privacy" class="ui header">{{t "Listing Privacy"}}</label>
       <div class="field">
         <div class="ui radio checkbox">
           {{widgets/forms/radio-button
