--- a/app/templates/components/widgets/steps-indicator.hbs
+++ b/app/templates/components/widgets/steps-indicator.hbs
@@ -1,6 +1,6 @@
 <div class="ui {{ui-grid-number this.processedSteps.length}} steps">
   {{#each this.processedSteps as |step index|}}
-    <a class="{{if (eq this.currentIndex index) 'active'}} {{if step.isDisabled 'disabled'}} {{if step.isCompleted 'completed'}} step" href="{{unless this.disableLinks (href-to step.route)}}">
+    <a class="{{if (eq this.currentIndex index) 'active'}} {{if step.isDisabled 'disabled'}}  step" href="{{unless this.disableLinks (href-to step.route)}}">
       <i class="{{step.icon}}"></i>
       <div class="content">
         <div class="title">{{step.title}}</div>
@@ -9,3 +9,9 @@
     </a>
   {{/each}}
 </div>
+<style>
+  .ui.steps .step:after {
+    width: 0;
+    height: 0;
+  }
+</style>
