Added new style sheet for Topic and added dummy topics for the Sponsors and Sessions pages

--- a/app/styles/pages/my.scss
+++ b/app/styles/pages/my.scss
@@ -6,6 +6,15 @@
   margin: 20px;
 }
 
+.topic-card {
+  background-color: #f0ffff;
+  box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 1/5);
+  padding: 20px;
+  border-radius: 5px;
+  margin: 20px;
+  width: 100%;
+}
+
 .collapsible {
   background-color: #e0e1e2;
   cursor: pointer;
