--- a/app/templates/components/forms/wizard/attendee-step.hbs
+++ b/app/templates/components/forms/wizard/attendee-step.hbs
@@ -17,13 +17,24 @@
           </div>
         </div>
       </div>
-      <div class="ui center aligned header">
+      {{!-- <div class="ui center aligned header">
         {{t 'Information About Attendee Form'}}
       </div>
       <div class="ui muted text">
         {{t 'The attendee form by default collects the name and email of an attendee. You also have the option to collect additional information such as contact data, position, organization and more. This information will be available together with the ticket information in a CSV file in the ticket section of your event.'}}
-      </div>
+      </div> --}}
     </div>
+  </div>
+
+  {{!-- Included a topic Card--}}
+  <div class = "center topic-card">
+    <div class="ui center aligned header">
+      {{t 'Information About Attendee Form'}}
+    </div>
+    <div class="ui muted text">
+      {{t 'The attendee form by default collects the name and email of an attendee. You also have the option to collect additional information such as contact data, position, organization and more. This information will be available together with the ticket information in a CSV file in the ticket section of your event.'}}
+    </div>
+  {{!--end--}}
   </div>
   <div class="ui hidden divider"></div>
   <h3 class="ui dividing header">
