forgot password form changes

--- a/app/templates/components/forms/login-form.hbs
+++ b/app/templates/components/forms/login-form.hbs
@@ -9,7 +9,7 @@
     {{/each}}
   </div>
   <div class="column">
-    <form class="ui large form" autocomplete="off">
+    <form class="ui large form" autocomplete="off" style="cursor: default;">
       <div class="ui aligned segment basic no margin no padding">
         <h2 class="weight-300 text centered">{{t 'Login'}}</h2>
       </div>
