--- a/app/templates/components/forms/reset-password-form.hbs
+++ b/app/templates/components/forms/reset-password-form.hbs
@@ -1,11 +1,11 @@
-<div class="ui stackable three column doubling centered grid">
+<div class="ui stackable two column doubling centered grid mt-4">
   <div class="column">
-    <form class="ui large form" autocomplete="off" {{action 'submit' on='submit'}}>
+    <form class="ui large form" autocomplete="off" {{action 'submit' on='submit'}} style="cursor: default;">
       <div class="ui aligned segment basic no margin no padding">
-        <h3 class="weight-400">{{t 'Forgot Password'}}</h3>
+        <h2 class="weight-300 text centered">{{t 'Forgot Password'}}</h2>
       </div>
       <div class="ui segments">
-        <div class="ui segment {{if this.isLoading 'loading' ''}}">
+        <div class="ui segment {{if this.isLoading 'loading' ''}}" style="padding: 30px;">
           {{#if this.errorMessage}}
             <div class="ui negative message">
               <p>{{this.errorMessage}}</p>
@@ -16,46 +16,61 @@
               <p>{{this.successMessage}}</p>
             </div>
           {{/if}}
-          <div class="field">
             {{#if this.token}}
-              <div class="ui left icon input">
-                <i class="lock icon"></i>
-                  <Input @type={{if this.showNewPass "text" "password"}} @name="password" placeholder={{t "Password"}} @value={{this.password}} />
-                <div class="ui small basic icon buttons">
-                  <button class="ui button" id="eye2" {{ action 'showNewPassword'}}>
-                    <i class="{{if this.showNewPass 'hide' 'unhide'}} basic icon"></i>
-                  </button>
+              <div class="field">
+                <label for="password">{{t 'Password'}}</label>
+                <div class="ui left icon input">
+                  <i class="lock icon"></i>
+                  <Input class="rounded-r-none" @type={{if this.showNewPass "text" "password"}} @name="password" @id="password" @value={{this.password}} />
+                  <div class="ui small basic icon buttons rounded-l-none">
+                    <button class="ui button" id="eye2" {{ action 'showNewPassword'}}>
+                      <i class="{{if this.showNewPass 'hide' 'unhide'}} basic icon"></i>
+                    </button>
+                  </div>
                 </div>
               </div>
-              <div class="ui hidden divider"></div>
-              <div class="ui left icon input">
-                <i class="lock icon"></i>
-                  <Input @type={{if this.showConfirmPass "text" "password"}} @name="password_repeat" placeholder={{t "Confirm Password"}} />
-                <div class="ui small basic icon buttons">
-                  <button class="ui button" id="eye2" {{ action 'showConfirmPassword'}}>
-                    <i class="{{if this.showConfirmPass 'hide' 'unhide'}} basic icon"></i>
-                  </button>
+              <div class="field">
+                <label for="password_repeat">{{t 'Confirm Password'}}</label>
+                <div class="ui left icon input">
+                  <i class="lock icon"></i>
+                  <Input class="rounded-r-none" @type={{if this.showConfirmPass "text" "password"}} @name="password_repeat" @id="password_repeat" />
+                  <div class="ui small basic icon buttons rounded-l-none">
+                    <button class="ui button" id="eye2" {{ action 'showConfirmPassword'}}>
+                      <i class="{{if this.showConfirmPass 'hide' 'unhide'}} basic icon"></i>
+                    </button>
+                  </div>
                 </div>
               </div>
             {{else}}
-              <div class="ui left icon input">
-                <i class="mail icon"></i>
-                <Input @name="email" placeholder={{t "Email ID"}} @value={{this.identification}} />
+              <div class="field">
+                <label for="email">{{t 'Email Address'}}</label>
+                <div class="ui left icon input">
+                  <i class="mail icon"></i>
+                  <Input @name="email" @id="email" @value={{this.identification}} />
+                </div>
               </div>
             {{/if}}
-          </div>
-          {{#if this.showHcaptcha}}
-            <HCaptcha @onSuccess={{action (mut this.captcha)}} @onExpired={{action (mut this.captcha)}} @onRender={{action (mut this.captchaRendered)}} />
-          {{/if}}
-          <div class="ui center aligned segment basic">
-            <button type="submit" class="ui fluid large teal submit button reset-password {{if (and (not this.captcha) this.showHcaptcha this.captchaRendered) 'disabled'}}">
-              {{t 'Reset Password'}}
-            </button>
+          <div class="ui center aligned segment basic" style="padding: 10px 0px 0px 0px">
+            {{#if this.showHcaptcha}}
+              <HCaptcha @onSuccess={{action (mut this.captcha)}} @onExpired={{action (mut this.captcha)}} @onRender={{action (mut this.captchaRendered)}} />
+            {{/if}}
+            <div class="ui vertical buttons" style="width: 100%;">
+              <button type="submit" class="ui fluid teal submit button reset-password {{if (and (not this.captcha) this.showHcaptcha this.captchaRendered) 'disabled'}}"
+                style="border-radius: 5px">
+                {{t 'Reset Password'}}
+              </button>
+            </div>
           </div>
         </div>
-        <div class="ui secondary segment center aligned">
-          <a href="{{href-to 'register'}}" class="text muted weight-800">{{t 'New to site? Create Account'}}</a>
-        </div>
+      </div>
+      <div class="ui segments">
+        <p class="ui segment center aligned text  weight-500">New to site?
+          <span>
+            <a class="hyperlink" href="{{href-to 'register'}}" >
+              {{t ' Create Account'}}
+            </a>
+          </span>
+        </p>
       </div>
     </form>
   </div>
