--- a/app/templates/components/events/view/overview/event-setup-checklist.hbs
+++ b/app/templates/components/events/view/overview/event-setup-checklist.hbs
@@ -1,112 +1,113 @@
 <div class="content">
   <div class="header">{{t 'Event Checklist'}}</div>
 </div>
-<div class= "content">
-  <div class="ui fluid segments">
-    <a href="{{href-to 'events.view.edit.basic-details'}}" class="ui segment {{unless this.data.event.name 'secondary'}} grid no margin">
-      <div class="ui row">
-        <div class="column one wide">
-          <i class="{{if this.data.event.name 'checkmark green' 'warning black'}} big icon"></i>
-        </div>
-        <div class="column fifteen wide">
-          <h4 class="ui header">
-            {{t 'Basic Details'}}
+<div class="content">
+
+  <div class="ui grid stackable">
+    <div class="row">
+
+      <div class="column {{if this.device.isMobile '' 'three wide'}} center aligned text">
+        <a href="{{href-to 'events.view.edit.basic-details'}}"
+          class="ui segment {{unless this.data.event.name 'secondary'}} grid no margin">
+          <div class="sixteen wide column">
+            <i class="{{if this.data.event.name 'checkmark green' 'warning black'}} big icon"></i>
+          </div>
+          <div>
+            <h4 class="ui header">
+              {{t 'Basic Details'}} </h4>
+          </div>
+          <div>
             <div class="sub header">
               {{t 'Basic information including title, date, venue, ticketing'}}
             </div>
-          </h4>
-        </div>
+          </div>
+        </a>
       </div>
-    </a>
-    <a href="{{href-to 'events.view.edit.other-details'}}" class="ui segment {{unless this.data.event.socialLinks 'secondary'}} grid no margin">
-      <div class="ui row">
-        <div class="column one wide">
-          <i class="{{if this.data.event.socialLinks 'checkmark green' 'warning black'}} big icon"></i>
-        </div>
-        <div class="column fifteen wide">
-          <h4 class="ui header">
-            {{t 'Additional Information'}}
+
+      <div class="column {{if this.device.isMobile '' 'three wide'}} center aligned text">
+        <a href="{{href-to 'events.view.edit.other-details'}}"
+          class="ui segment {{unless this.data.event.socialLinks 'secondary'}} grid no margin">
+          <div class="sixteen wide column">
+            <i class="{{if this.data.event.socialLinks 'checkmark green' 'warning black'}} big icon"></i>
+          </div>
+          <div>
+            <h4 class="ui header">
+              {{t 'Additional Information'}} </h4>
+          </div>
+          <div>
             <div class="sub header">
               {{t 'Links, social media, privacy, code of conduct'}}
             </div>
-          </h4>
-        </div>
+          </div>
+        </a>
       </div>
-    </a>
-    <a href="{{href-to 'events.view.edit.attendee'}}" class="ui segment {{unless this.data.event.isTicketFormEnabled 'secondary'}} grid no margin">
-      <div class="ui row">
-        <div class="column one wide">
-          <i class="{{if this.data.event.isTicketFormEnabled 'checkmark green' 'warning black'}} big icon"></i>
-        </div>
-        <div class="column fifteen wide">
-          <h4 class="ui header">
-            {{t 'Attendee Form'}}
+
+      <div class="column {{if this.device.isMobile '' 'three wide'}} center aligned text">
+        <a href="{{href-to 'events.view.edit.attendee'}}"
+          class="ui segment {{unless this.data.event.isTicketFormEnabled 'secondary'}} grid no margin">
+          <div class="sixteen wide column">
+            <i class="{{if this.data.event.isTicketFormEnabled 'checkmark green' 'warning black'}} big icon"></i>
+          </div>
+          <div>
+            <h4 class="ui header">
+              {{t 'Attendee Form'}} </h4>
+          </div>
+          <div>
             <div class="sub header">
               {{t 'Information to be collected from attendees'}}
             </div>
-          </h4>
-        </div>
+          </div>
+        </a>
       </div>
-    </a>
-    <a href="{{href-to 'events.view.edit.sponsors'}}" class="ui {{unless this.data.event.isSponsorsEnabled 'secondary'}} segment grid no margin">
-      <div class="ui row">
-        <div class="column one wide">
-          <i class="{{if this.data.event.isSponsorsEnabled 'checkmark green' 'warning black'}} big icon"></i>
-        </div>
-        <div class="column fifteen wide">
-          <h4 class="ui header">
-            {{t 'Sponsors'}}
+
+      <div class="column {{if this.device.isMobile '' 'three wide'}} center aligned text">
+        <a href="{{href-to 'events.view.edit.sponsors'}}"
+          class="ui {{unless this.data.event.isSponsorsEnabled 'secondary'}} segment grid no margin">
+          <div class="sixteen wide column">
+            <i class="{{if this.data.event.isSponsorsEnabled 'checkmark green' 'warning black'}} big icon"></i>
+          </div>
+          <div>
+            <h4 class="ui header">
+              {{t 'Sponsors'}} </h4>
+          </div>
+          <div>
             <div class="sub header">
               {{t 'Details and logos of sponsors'}}
             </div>
-          </h4>
-        </div>
+          </div>
+        </a>
       </div>
-    </a>
-    <a href="{{href-to 'events.view.edit.sessions-speakers'}}" class="ui {{unless this.data.event.isSessionsSpeakersEnabled 'secondary'}} segment grid no margin">
-      <div class="ui row">
-        <div class="column one wide">
-          <i class="{{if this.data.event.isSessionsSpeakersEnabled 'checkmark green' 'warning black'}} big icon"></i>
-        </div>
-        <div class="column fifteen wide">
-          <h4 class="ui header">
-            {{t 'Session, Tracks & Microlocations'}}
+
+      <div class="column {{if this.device.isMobile '' 'three wide'}} center aligned text">
+        <a href="{{href-to 'events.view.edit.sessions-speakers'}}"
+          class="ui {{unless this.data.event.isSessionsSpeakersEnabled 'secondary'}} segment grid no margin">
+          <div class="sixteen wide column">
+            <i class="{{if this.data.event.isSessionsSpeakersEnabled 'checkmark green' 'warning black'}} big icon"></i>
+          </div>
+          <div class="row">
+            <h4 class="ui header">
+              {{t 'Session, Tracks & Microlocations'}} </h4>
             <div class="sub header">
               {{t 'Tracks details and colors, session lengths, room locations'}}
             </div>
-          </h4>
-        </div>
-      </div>
-    </a>
-    <a href="{{href-to 'events.view.edit.sessions-speakers'}}" class="ui {{unless this.data.event.speakersCall.announcement 'secondary'}} segment grid no margin">
-      <div class="ui row">
-        <div class="column one wide">
-          <i class="{{if this.data.event.speakersCall.announcement 'checkmark green' 'warning black'}} big icon"></i>
-        </div>
-        <div class="column fifteen wide">
-          <h4 class="ui header">
-            {{t 'Call For Speakers'}}
-            <div class="sub header">
-              {{t 'Call for speakers announcement and dates'}}
+          </div>
+          <div class="row">
+            <div>
+              <i class="{{if this.data.event.speakersCall.announcement 'checkmark green' 'warning black'}} icon"></i>
+              <h4 class="ui header">
+                {{t 'Call For Speakers'}}</h4>
             </div>
-          </h4>
-        </div>
-      </div>
-    </a>
-    <a href="{{href-to 'events.view.edit.sessions-speakers'}}" class="ui {{unless this.data.event.isSessionsSpeakersEnabled 'secondary'}} segment grid no margin">
-      <div class="ui row">
-        <div class="column one wide">
-          <i class="{{if this.data.event.isSessionsSpeakersEnabled 'checkmark green' 'warning black'}} big icon"></i>
-        </div>
-        <div class="column fifteen wide">
-          <h4 class="ui header">
-            {{t 'Session & Speaker forms customization'}}
-            <div class="sub header">
-              {{t 'Customize the session and speaker registration forms'}}
+            <div>
+              <div class="sub header">
+                {{t 'Call for speakers announcement and dates'}}
+              </div>
             </div>
-          </h4>
-        </div>
+          </div>
+        </a>
       </div>
-    </a>
+
+
+    </div>
   </div>
+
 </div>
