--- a/app/components/forms/wizard/custom-forms/table.hbs
+++ b/app/components/forms/wizard/custom-forms/table.hbs
@@ -18,7 +18,7 @@
           {{t 'Options'}}
         </th>
       {{else}}
-        <th class="right aligned">
+        <th class="center aligned">
           {{t 'Option'}}
         </th>
         <th class="center aligned">
@@ -44,7 +44,7 @@
   <tbody>
     {{#each @fields as |field|}}
       <DraggableObject @overrideClass="{{if field.isIncluded 'positive'}} table-row" @content={{field}} @isSortable={{true}}>
-          <td class="{{if this.device.isMobile 'center' 'right'}} border right aligned">
+          <td class="{{if this.device.isMobile 'center' 'right'}} border left aligned">
             <label class="{{if field.isFixed 'required'}}">
               {{t-var field.name}}
               {{#if field.isComplex}}
@@ -54,7 +54,7 @@
               {{/if}}
               </label>
           </td>
-          <td class="border center aligned">
+          <td class="border left aligned">
             {{t-var field.type}}
           </td>
           <td class="border center aligned">
