Chnages applied to the css files and some chnages in sponser and session pages

--- a/app/styles/pages/my.scss
+++ b/app/styles/pages/my.scss
@@ -7,12 +7,12 @@
 }
 
 .topic-card {
-  background-color: #f0ffff;
+  background-color: #fff;
   box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 1/5);
   padding: 20px;
   border-radius: 5px;
-  margin: 20px;
   width: 100%;
+  margin-bottom: 15px;
 }
 
 .collapsible {
